--- a/Assignment1.html
+++ b/Assignment1.html
@@ -57,6 +57,8 @@
         <p>This is one of my favorites!</p>
     </div>
     <hr>
+</body>
+    <footer>
     <nav>
         <a href="#">Home</a> |
         <a href="#">Art Works</a> |
@@ -64,6 +66,5 @@
         <a href="#">About Us</a>
     </nav>
     <p><i>Copyright &copy;2017 My Sample Art Store</i></p>
-</body>
-
+</footer>
 </html>
