--- a/Assignment1.html
+++ b/Assignment1.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <title>My Sample Art Store</title>
+    <header>
+        <h1>My Sample Art Store</h1>
+        <nav style="font-family:sans-serif">
+            <a href="#">Home</a> |
+            <a href="#">Artist</a> |
+            <a href="#">Artworks</a> |
+            <a href="#">About Us</a> |
+            <a href="#">Search</a>
+        </nav>
+    </header>
 </head>
 
 <body>
-    <h1>My Sample Art Store</h1>
-    <nav style="font-family:sans-serif">
-        <a href="#">Home</a> |
-        <a href="#">Artist</a> |
-        <a href="#">Artworks</a> |
-        <a href="#">About Us</a> |
-        <a href="#">Search</a>
-    </nav>
     <h2>Mademoiselle Caroline Rivi&egrave;re</h2>
     <p>
         by <a href="#">Jean-Auguste-Dominique Ingres</a>
@@ -59,12 +61,12 @@
     <hr>
 </body>
     <footer>
-    <nav>
+     <nav>
         <a href="#">Home</a> |
         <a href="#">Art Works</a> |
         <a href="#">Artist</a> |
         <a href="#">About Us</a>
-    </nav>
-    <p><i>Copyright &copy;2017 My Sample Art Store</i></p>
-</footer>
+     </nav>
+      <p><i>Copyright &copy;2017 My Sample Art Store</i></p>
+    </footer>
 </html>
